--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "postinstall": "prisma generate",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-     "next": "14.2.13",
+    "next": "14.2.13",
     "prisma": "^6.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
