--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "postinstall": "prisma generate",
     "build": "next build",
     "start": "next start",
+    "migrate": "prisma migrate deploy",
+    "generate": "prisma generate",
     "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "next": "14.2.13",
+    "next": "^14.2.33",
     "prisma": "^6.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
