--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "migrate": "prisma migrate deploy",
-    "generate": "prisma generate",
+    "postinstall": "prisma generate",
     "lint": "eslint"
   },
   "dependencies": {
