--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcryptjs": "^3.0.3",
     "next": "^14.2.33",
     "prisma": "^6.19.0",
     "react": "^18.3.1",
